gccida/g0/collect_args
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:918:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 * collect_args( cpp_reader_0 *pfile, const cpp_hashnode_0 *node) 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:918:29: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
_cpp_buff_0 * collect_args( cpp_reader_0 *pfile, const cpp_hashnode_0 *node) 
                            ^~~~~~~~~~~~
                            cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:918:56: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
_cpp_buff_0 * collect_args( cpp_reader_0 *pfile, const cpp_hashnode_0 *node) 
                                                       ^~~~~~~~~~~~~~
                                                       cpp_hashnode
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:922:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 *token; // [rsp+18h] [rbp-48h] 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:923:1: error: unknown type name 'macro_arg_0'; did you mean 'macro_arg'?
macro_arg_0 *args; // [rsp+20h] [rbp-40h] 
^~~~~~~~~~~
macro_arg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:43:26: note: 'macro_arg' declared here
typedef struct macro_arg macro_arg;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:924:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *base_buff; // [rsp+28h] [rbp-38h] 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:925:1: error: unknown type name 'cpp_macro_0'; did you mean 'cpp_macro'?
cpp_macro_0 *macro; // [rsp+30h] [rbp-30h] 
^~~~~~~~~~~
cpp_macro
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpplib.h:43:26: note: 'cpp_macro' declared here
typedef struct cpp_macro cpp_macro;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:932:1: error: unknown type name 'macro_arg_0'; did you mean 'macro_arg'?
macro_arg_0 *arg; // [rsp+50h] [rbp-10h] 
^~~~~~~~~~~
macro_arg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:43:26: note: 'macro_arg' declared here
typedef struct macro_arg macro_arg;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:933:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *buff; // [rsp+58h] [rbp-8h] 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:943:23: error: expected expression
args = ( macro_arg_0 *)buff->base; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:943:10: error: use of undeclared identifier 'macro_arg_0'
args = ( macro_arg_0 *)buff->base; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:946:13: error: expected identifier or '('
 struct arg = args; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:953:28: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
for ( arg->first = ( const cpp_token_0 **)buff->cur; ; arg->first[v3] = token ) 
                           ^~~~~~~~~~~
                           cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:957:63: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
if ( &arg->first[( unsigned __int64)( ntokens + 2)] > ( const cpp_token_0 **)buff->limit ) 
                                                              ^~~~~~~~~~~
                                                              cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cppmacro.c:960:22: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
arg->first = ( const cpp_token_0 **)buff->cur; 
                     ^~~~~~~~~~~
                     cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/collect_args/src/obj/cppmacro.o] Error 1
